Rest model controller n progress

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,7 +7,12 @@ auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.continuationIndentSize=4
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.tab-size=4
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-limit-width=80
-include.path=${php.global.include.path}
+file.reference.library-Zend=../ZendFramework-1.10.4-minimal/library/Zend
+file.reference.workspace-Doctrine=../Doctrine
+include.path=\
+    ${php.global.include.path}:\
+    ${file.reference.workspace-Doctrine}:\
+    ${file.reference.library-Zend}
 php.version=PHP_5
 source.encoding=UTF-8
 src.dir=.
