--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -6,21 +6,15 @@ role.2 = "admin"
 ; Die existierenden Resourcen angeben
 res.0 = "index"
 res.1 = "error"
-res.2 = "login"
-res.3 = "account"
-res.4 = "customer"
+res.2 = "user"
 
 ; Nun die genehmigungen für die einzelnen Rollen
 access.guest.0 = "index"
 access.guest.1 = "error"
-access.guest.2 = "login"
+access.guest.2 = "user"
 
 access.user.0 = "index"
 access.user.1 = "error"
-access.user.2 = "account"
-access.user.3 = "customer"
-access.user.3 = "login"
 
 access.admin.0 = "index"
 access.admin.1 = "error"
-access.admin.2 = "account"
