--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -20,6 +20,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 resources.frontController.plugins.auth = "Patchwork_Controller_Plugin_Auth"
 resources.frontController.plugins.phpids = "Patchwork_Controller_Plugin_PHPIDS"
+resources.frontController.actionhelperpaths.Doctrine = "Patchwork/Controller/Action/Helper/Doctrine.php"
 
 ;
 ; layout and view
@@ -84,9 +85,6 @@ resources.mail.defaultFrom.email = john@example.com
 resources.mail.defaultFrom.name = "John Doe"
 resources.mail.defaultReplyTo.email = Jane@example.com
 resources.mail.defaultReplyTo.name = "Jane Doe"
-
-
-
 
 
 
