--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,6 +1,7 @@
 [production]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
+phpSettings.date.timezone = "Europe/Berlin"
 
 ;
 ; autoloader
@@ -20,7 +21,6 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 resources.frontController.plugins.auth = "Patchwork_Controller_Plugin_Auth"
 resources.frontController.plugins.phpids = "Patchwork_Controller_Plugin_PHPIDS"
-resources.frontController.actionhelperpaths.Doctrine = "Patchwork/Controller/Action/Helper/Doctrine.php"
 
 ;
 ; layout and view
@@ -37,12 +37,12 @@ resources.session.remember_me_seconds = 864000
 resources.session.use_only_cookies = true
 
 ; Locale
-resources.locale.default = "de"
+resources.locale.default = "de_DE"
 
 ;
 ; Doctrine
 ;
-doctrine.connections.db = "mysql://root:root@localhost/emma"
+doctrine.connections.db = "mysql://root:@localhost/patchwork"
 doctrine.options.data_fixtures_path = APPLICATION_PATH "/doctrine/fixtures"
 doctrine.options.models_path = APPLICATION_PATH "/models"
 doctrine.options.migrations_path = APPLICATION_PATH "/doctrine/migrations"
@@ -50,9 +50,9 @@ doctrine.options.sql_path = APPLICATION_PATH "/doctrine/sql"
 doctrine.options.yaml_schema_path = APPLICATION_PATH "/doctrine/schema"
 
 ;
+; PHPIDS
 ;
-;
-phpids.impact_threshold = 20
+phpids.impact_threshold = 10
 phpids.General.filter_type     = xml
 phpids.General.base_path       = LIBRARY_PATH "/IDS/"
 phpids.General.use_base_path   = false
@@ -71,23 +71,6 @@ phpids.Caching.caching         = file
 phpids.Caching.expiration_time = 600
 phpids.Caching.path            = TMP_PATH "/default_filter.cache"
 
-
-;
-;
-;
-resources.mail.transport.type = smtp
-resources.mail.transport.host = "smtp.example.com"
-resources.mail.transport.auth = login
-resources.mail.transport.username = myUsername
-resources.mail.transport.password = myPassword
-resources.mail.transport.register = true ; True by default
-resources.mail.defaultFrom.email = john@example.com
-resources.mail.defaultFrom.name = "John Doe"
-resources.mail.defaultReplyTo.email = Jane@example.com
-resources.mail.defaultReplyTo.name = "Jane Doe"
-
-
-
 ;
 ; staging
 ;
@@ -101,3 +84,4 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
