Fixed module autoloader, auth login form

--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -6,12 +6,12 @@ role.2 = "admin"
 ; Die existierenden Resourcen angeben
 res.0 = "index"
 res.1 = "error"
-res.2 = "user"
+res.2 = "auth"
 
 ; Nun die genehmigungen für die einzelnen Rollen
 access.guest.0 = "index"
 access.guest.1 = "error"
-access.guest.2 = "user"
+access.guest.2 = "auth"
 
 access.user.0 = "index"
 access.user.1 = "error"
