--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -3,16 +3,20 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 phpSettings.date.timezone = "Europe/Berlin"
 
+includePaths.models = APPLICATION_PATH "/models"
+includePaths.generated = APPLICATION_PATH "/models/generated"
+includePaths.forms = APPLICATION_PATH "/forms"
+
 ;
 ; autoloader
 ;
 autoloaderNamespaces[] = "IDS_"
 autoloaderNamespaces[] = "Doctrine_"
-autoloaderNamespaces[] = "Patchwork_"
+autoloaderNamespaces[] = "Patchwork"
 
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
-appnamespace = "Application"
+
 
 ;
 ; controller plugins
@@ -29,6 +33,7 @@ resources.layout.layout = "layout"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
 resources.view.encoding = "UTF-8"
 resources.view.basePath = APPLICATION_PATH "/views/"
+resources.view.helperPath.Patchwork_View_Helper = LIBRARY_PATH "/Patchwork/View/Helper"
 
 ;
 ; session
