--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,12 +8,17 @@ auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.conti
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.tab-size=4
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-limit-width=80
 file.reference.library-Zend=../ZendFramework-1.10.4-minimal/library/Zend
+file.reference.library-Zend-1=library/Zend
 file.reference.workspace-Doctrine=../Doctrine
+ignore.path=
 include.path=\
     ${php.global.include.path}:\
-    ${file.reference.workspace-Doctrine}:\
-    ${file.reference.library-Zend}
+    ${file.reference.library-Zend-1}
 php.version=PHP_5
+phpunit.bootstrap=
+phpunit.bootstrap.create.tests=false
+phpunit.configuration=
+phpunit.suite=
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
