Unit testing with sqlite memory

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -84,6 +84,8 @@ phpids.Caching.path            = TMP_PATH "/default_filter.cache"
 [testing : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
+resources.frontController.params.displayExceptions = 1
+doctrine.connections.db = "sqlite::memory:"
 
 [development : production]
 phpSettings.display_startup_errors = 1
