Refactored the libraries

--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -1,20 +1,23 @@
-; Die existierenden Rollen angeben
+; Roles
 role.0 = "guest"
 role.1 = "user"
 role.2 = "admin"
 
-; Die existierenden Resourcen angeben
+; Ressources
 res.0 = "index"
 res.1 = "error"
 res.2 = "auth"
+res.3 = "user"
 
-; Nun die genehmigungen für die einzelnen Rollen
+; Access permissions for each role
 access.guest.0 = "index"
 access.guest.1 = "error"
 access.guest.2 = "auth"
+access.guest.3 = "user"
 
-access.user.0 = "index"
-access.user.1 = "error"
+access.user.1 = "index"
+access.user.2 = "error"
+access.user.3 = "user"
 
-access.admin.0 = "index"
-access.admin.1 = "error"
+access.admin.1 = "index"
+access.admin.2 = "error"
