--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -77,6 +77,11 @@ phpids.Caching.expiration_time = 600
 phpids.Caching.path            = TMP_PATH "/default_filter.cache"
 
 ;
+; general settings
+;
+general.setting.rest_routing = 0
+
+;
 ; staging
 ;
 [staging : production]
@@ -92,3 +97,4 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
+[patchwork.local : development]
