API Module as REST service wiht http basic auth against db

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -25,6 +25,13 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 resources.frontController.plugins.auth = "Patchwork_Controller_Plugin_Auth"
 resources.frontController.plugins.phpids = "Patchwork_Controller_Plugin_PHPIDS"
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
+resources.frontController.defaultModule = "default"
+
+;
+; modules
+;
+resources.modules[] = ""
 
 ;
 ; layout and view
@@ -76,10 +83,6 @@ phpids.Caching.caching         = file
 phpids.Caching.expiration_time = 600
 phpids.Caching.path            = TMP_PATH "/default_filter.cache"
 
-;
-; general settings
-;
-general.setting.rest_routing = 0
 
 ;
 ; staging
