Rest api module activated by plugin

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -25,6 +25,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 resources.frontController.plugins.auth = "Patchwork_Controller_Plugin_Auth"
 resources.frontController.plugins.phpids = "Patchwork_Controller_Plugin_PHPIDS"
+;resources.frontController.plugins.restapi = "Patchwork_Controller_Plugin_RESTAPI"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.defaultModule = "default"
 
