Doctrine Application Resource

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,6 +7,7 @@ includePaths.models = APPLICATION_PATH "/models"
 includePaths.generated = APPLICATION_PATH "/models/generated"
 includePaths.forms = APPLICATION_PATH "/forms"
 
+pluginPaths.patchwork_application_resource = LIBRARY_PATH "/Patchwork/Application/Resource"
 ;
 ; autoloader
 ;
@@ -25,7 +26,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 resources.frontController.plugins.auth = "Patchwork_Controller_Plugin_Auth"
 resources.frontController.plugins.phpids = "Patchwork_Controller_Plugin_PHPIDS"
-;resources.frontController.plugins.restapi = "Patchwork_Controller_Plugin_RESTAPI"
+resources.frontController.plugins.restapi = "Patchwork_Controller_Plugin_RESTAPI"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.defaultModule = "default"
 
@@ -55,12 +56,12 @@ resources.locale.default = "de_DE"
 ;
 ; Doctrine
 ;
-doctrine.connections.db = "mysql://root:@localhost/patchwork"
-doctrine.options.data_fixtures_path = APPLICATION_PATH "/doctrine/fixtures"
-doctrine.options.models_path = APPLICATION_PATH "/models"
-doctrine.options.migrations_path = APPLICATION_PATH "/doctrine/migrations"
-doctrine.options.sql_path = APPLICATION_PATH "/doctrine/sql"
-doctrine.options.yaml_schema_path = APPLICATION_PATH "/doctrine/schema"
+resources.doctrine.connections.db = "mysql://root:@localhost/patchwork"
+resources.doctrine.options.data_fixtures_path = APPLICATION_PATH "/doctrine/fixtures"
+resources.doctrine.options.models_path = APPLICATION_PATH "/models"
+resources.doctrine.options.migrations_path = APPLICATION_PATH "/doctrine/migrations"
+resources.doctrine.options.sql_path = APPLICATION_PATH "/doctrine/sql"
+resources.doctrine.options.yaml_schema_path = APPLICATION_PATH "/doctrine/schema"
 
 ;
 ; PHPIDS
@@ -94,7 +95,7 @@ phpids.Caching.path            = TMP_PATH "/default_filter.cache"
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-doctrine.connections.db = "sqlite::memory:"
+resources.doctrine.connections.db = "sqlite::memory:"
 
 [development : production]
 phpSettings.display_startup_errors = 1
