REST API plugin improvements and doc

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,7 +7,6 @@ includePaths.models = APPLICATION_PATH "/models"
 includePaths.generated = APPLICATION_PATH "/models/generated"
 includePaths.forms = APPLICATION_PATH "/forms"
 
-pluginPaths.patchwork_application_resource = LIBRARY_PATH "/Patchwork/Application/Resource"
 ;
 ; autoloader
 ;
@@ -18,13 +17,16 @@ autoloaderNamespaces[] = "Patchwork"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
+; patchwork
+patchwork.options.restAPI.module = 'api'
+patchwork.options.restAPI.useHttpBasicAuth = true
 
 ;
 ; controller plugins
 ;
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
-resources.frontController.plugins.auth = "Patchwork_Controller_Plugin_Auth"
+;resources.frontController.plugins.auth = "Patchwork_Controller_Plugin_Auth"
 resources.frontController.plugins.phpids = "Patchwork_Controller_Plugin_PHPIDS"
 resources.frontController.plugins.restapi = "Patchwork_Controller_Plugin_RESTAPI"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
@@ -56,6 +58,7 @@ resources.locale.default = "de_DE"
 ;
 ; Doctrine
 ;
+pluginPaths.patchwork_application_resource = LIBRARY_PATH "/Patchwork/Application/Resource"
 resources.doctrine.connections.db = "mysql://root:@localhost/patchwork"
 resources.doctrine.options.data_fixtures_path = APPLICATION_PATH "/doctrine/fixtures"
 resources.doctrine.options.models_path = APPLICATION_PATH "/models"
