--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -65,6 +65,7 @@ resources.doctrine.options.models_path = APPLICATION_PATH "/models"
 resources.doctrine.options.migrations_path = APPLICATION_PATH "/doctrine/migrations"
 resources.doctrine.options.sql_path = APPLICATION_PATH "/doctrine/sql"
 resources.doctrine.options.yaml_schema_path = APPLICATION_PATH "/doctrine/schema"
+resources.doctrine.options.use_query_cache = true
 
 ;
 ; PHPIDS
@@ -99,6 +100,7 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 resources.doctrine.connections.db = "sqlite::memory:"
+resources.doctrine.options.use_zend_cache = 0
 
 [development : production]
 phpSettings.display_startup_errors = 1
