Changed Acl to regard modules, improved auth plugin, phpids

--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -1,19 +1,20 @@
-; Roles
-role.0 = "guest"
-role.1 = "user"
-role.2 = "admin"
+[guest]
 
-; Ressources
-res.0 = "index"
-res.1 = "error"
-res.2 = "auth"
-res.3 = "user"
+module.0 = "default"
+module.1 = "user"
+module.2 = "admin"
 
 ; Access permissions for each role
-access.guest.0 = "index"
-access.guest.1 = "error"
-access.guest.2 = "auth"
-access.guest.3 = "user"
+controller.default.index = true
+controller.user.index = true
+controller.user.auth = true
+
+[user : guest]
+
+controller.user.auth = true
+
+[admin : user]
+
 
 access.user.1 = "index"
 access.user.2 = "error"
