--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -20,6 +20,11 @@ bootstrap.class = "Bootstrap"
 ; patchwork
 patchwork.options.restAPI.module = 'api'
 patchwork.options.restAPI.useHttpBasicAuth = true
+patchwork.options.acl.iniFile = CONFIG_PATH "/acl.ini"
+patchwork.options.acl.autoload = 1
+patchwork.options.acl.errorController = "error"
+patchwork.options.acl.errorAction = "denied"
+
 
 ;
 ; controller plugins
@@ -71,6 +76,8 @@ resources.doctrine.options.use_query_cache = true
 ; PHPIDS
 ;
 phpids.impact_threshold = 10
+phpids.impact_controller = error
+phpids.impact_action = badrequest
 phpids.General.filter_type     = xml
 phpids.General.base_path       = LIBRARY_PATH "/IDS/"
 phpids.General.use_base_path   = false
