DI Container (WIP)

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -20,11 +20,16 @@ bootstrap.class = "Bootstrap"
 ; patchwork
 patchwork.options.restAPI.module = 'api'
 patchwork.options.restAPI.useHttpBasicAuth = true
-patchwork.options.acl.iniFile = CONFIG_PATH "/acl.ini"
-patchwork.options.acl.autoload = 1
 patchwork.options.acl.errorController = "error"
 patchwork.options.acl.errorAction = "denied"
 
+
+;
+; dependency injection container
+;
+patchwork.container.interfaceX.bindImplementation = "App_Implementation_Y"
+patchwork.container.interfaceY.bindFactory= "App_Implementation_Factory"
+patchwork.container.interfaceY.bindFactoryMethod= "factory"
 
 ;
 ; controller plugins
@@ -114,4 +119,4 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
-[patchwork.local : development]
+[patchwork.dan : development]
