Patchwork dependency injection container and Patchwork_Factory

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -28,8 +28,8 @@ patchwork.options.acl.errorAction = "denied"
 ; dependency injection container
 ;
 patchwork.container.interfaceX.bindImplementation = "App_Implementation_Y"
-patchwork.container.interfaceY.bindFactory= "App_Implementation_Factory"
-patchwork.container.interfaceY.bindFactoryMethod= "factory"
+patchwork.container.Zend_Controller_Request_Abstract.bindFactory= "Patchwork_Factory"
+patchwork.container.Zend_Controller_Request_Abstract.bindFactoryMethod= "request"
 
 ;
 ; controller plugins
