Refactored auth controller plugins, unit tests working

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -28,8 +28,11 @@ patchwork.options.acl.errorAction = "denied"
 ; dependency injection container
 ;
 patchwork.container.interfaceX.bindImplementation = "App_Implementation_Y"
+
 patchwork.container.Zend_Controller_Request_Abstract.bindFactory= "Patchwork_Factory"
 patchwork.container.Zend_Controller_Request_Abstract.bindFactoryMethod= "request"
+patchwork.container.navigation.bindFactory= "Patchwork_Factory"
+patchwork.container.navigation.bindFactoryMethod= "navigation"
 
 ;
 ; controller plugins
