Rewrote authentication, moved doctrine models path

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -3,8 +3,8 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 phpSettings.date.timezone = "Europe/Berlin"
 
-includePaths.models = APPLICATION_PATH "/models"
-includePaths.generated = APPLICATION_PATH "/models/generated"
+includePaths.models = APPLICATION_PATH "/doctrine/models"
+includePaths.generated = APPLICATION_PATH "/doctrine/models/generated"
 includePaths.forms = APPLICATION_PATH "/forms"
 
 ;
@@ -28,6 +28,9 @@ patchwork.options.acl.errorAction = "denied"
 ; dependency injection container
 ;
 patchwork.container.interfaceX.bindImplementation = "App_Implementation_Y"
+
+patchwork.container.Patchwork_Auth_DBAdapter.bindImplementation = "Patchwork_Auth_Adapter_Doctrine"
+patchwork.container.Patchwork_Auth_DBModel.bindImplementation = "User"
 
 patchwork.container.Zend_Controller_Request_Abstract.bindFactory= "Patchwork_Factory"
 patchwork.container.Zend_Controller_Request_Abstract.bindFactoryMethod= "request"
@@ -74,7 +77,7 @@ resources.locale.default = "de_DE"
 pluginPaths.patchwork_application_resource = LIBRARY_PATH "/Patchwork/Application/Resource"
 resources.doctrine.connections.db = "mysql://root:@localhost/patchwork"
 resources.doctrine.options.data_fixtures_path = APPLICATION_PATH "/doctrine/fixtures"
-resources.doctrine.options.models_path = APPLICATION_PATH "/models"
+resources.doctrine.options.models_path = APPLICATION_PATH "/doctrine/models"
 resources.doctrine.options.migrations_path = APPLICATION_PATH "/doctrine/migrations"
 resources.doctrine.options.sql_path = APPLICATION_PATH "/doctrine/sql"
 resources.doctrine.options.yaml_schema_path = APPLICATION_PATH "/doctrine/schema"
