Fixed app and tests to work with zfdoctrine

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -75,7 +75,12 @@ resources.locale.default = "de_DE"
 ; Doctrine
 ;
 pluginPaths.patchwork_application_resource = LIBRARY_PATH "/Patchwork/Application/Resource"
-resources.doctrine.connections.db = "mysql://root:@localhost/patchwork"
+pluginPaths.zfdoctrine_application_resource = LIBRARY_PATH "/ZFDoctrine/Application/Resource"
+resources.doctrine.connections.dsn.driver = "mysql"
+resources.doctrine.connections.dsn.user = "root"
+resources.doctrine.connections.dsn.host = "localhost"
+resources.doctrine.connections.dsn.database = "patchwork"
+resources.doctrine.connections.dsn.dsn = "mysql://root:@localhost/patchwork"
 resources.doctrine.options.data_fixtures_path = APPLICATION_PATH "/doctrine/fixtures"
 resources.doctrine.options.models_path = APPLICATION_PATH "/doctrine/models"
 resources.doctrine.options.migrations_path = APPLICATION_PATH "/doctrine/migrations"
@@ -117,7 +122,7 @@ phpids.Caching.path            = TMP_PATH "/default_filter.cache"
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-resources.doctrine.connections.db = "sqlite::memory:"
+resources.doctrine.connections.dsn.dsn = "sqlite::memory:"
 resources.doctrine.options.use_zend_cache = 0
 
 [development : production]
