--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -130,4 +130,5 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
+[patchwork.local : development]
 [patchwork.dan : development]
