Added user module

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -52,6 +52,7 @@ resources.frontController.defaultModule = "default"
 ; modules
 ;
 resources.modules[] = ""
+resources.modules[] = "user"
 
 ;
 ; layout and view
