Removed doctrine traces, moved models into modules

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -3,9 +3,9 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 phpSettings.date.timezone = "Europe/Berlin"
 
-includePaths.models = APPLICATION_PATH "/doctrine/models"
-includePaths.generated = APPLICATION_PATH "/doctrine/models/generated"
 includePaths.forms = APPLICATION_PATH "/forms"
+; LIBRARY_PATH does not work on CLI
+includePaths.library = APPLICATION_PATH "/../library"
 
 ;
 ; autoloader
@@ -13,6 +13,7 @@ includePaths.forms = APPLICATION_PATH "/forms"
 autoloaderNamespaces[] = "IDS_"
 autoloaderNamespaces[] = "Doctrine_"
 autoloaderNamespaces[] = "Patchwork"
+autoloaderNamespaces[] = "ZFDoctrine"
 
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
@@ -75,8 +76,7 @@ resources.locale.default = "de_DE"
 ;
 ; Doctrine
 ;
-pluginPaths.patchwork_application_resource = LIBRARY_PATH "/Patchwork/Application/Resource"
-pluginPaths.zfdoctrine_application_resource = LIBRARY_PATH "/ZFDoctrine/Application/Resource"
+pluginPaths.zfdoctrine_application_resource = APPLICATION_PATH "/../library/ZFDoctrine/Application/Resource"
 resources.doctrine.connections.dsn.driver = "mysql"
 resources.doctrine.connections.dsn.user = "root"
 resources.doctrine.connections.dsn.host = "localhost"
