per-module models

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -3,8 +3,12 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 phpSettings.date.timezone = "Europe/Berlin"
 
-includePaths.forms = APPLICATION_PATH "/forms"
+;
+; include paths
 ; LIBRARY_PATH does not work on CLI
+;
+includePaths.forms = APPLICATION_PATH "/forms"
+includePaths.sfYaml = APPLICATION_PATH "/../library/vendor/sfYaml"
 includePaths.library = APPLICATION_PATH "/../library"
 
 ;
@@ -54,6 +58,7 @@ resources.frontController.defaultModule = "default"
 ;
 resources.modules[] = ""
 resources.modules[] = "user"
+resources.modules[] = "core"
 
 ;
 ; layout and view
@@ -77,6 +82,7 @@ resources.locale.default = "de_DE"
 ; Doctrine
 ;
 pluginPaths.zfdoctrine_application_resource = APPLICATION_PATH "/../library/ZFDoctrine/Application/Resource"
+;pluginpaths.ZFDoctrine_Application_Resource = "ZFDoctrine/Application/Resource"
 resources.doctrine.connections.dsn.driver = "mysql"
 resources.doctrine.connections.dsn.user = "root"
 resources.doctrine.connections.dsn.host = "localhost"
@@ -88,6 +94,9 @@ resources.doctrine.options.migrations_path = APPLICATION_PATH "/doctrine/migrati
 resources.doctrine.options.sql_path = APPLICATION_PATH "/doctrine/sql"
 resources.doctrine.options.yaml_schema_path = APPLICATION_PATH "/doctrine/schema"
 resources.doctrine.options.use_query_cache = true
+resources.doctrine.manager.attributes.attr_model_loading = "model_loading_zend"
+resources.doctrine.connections.default.dsn = "mysql://root:passwd@localhost/my_app"
+
 
 ;
 ; PHPIDS
