Major refactoring to work with zf and zfdoctrine

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -5,22 +5,23 @@ phpSettings.date.timezone = "Europe/Berlin"
 
 ;
 ; include paths
-; LIBRARY_PATH does not work on CLI
+; LIBRARY_PATH rom env.php does not work with zf tool
 ;
-includePaths.forms = APPLICATION_PATH "/forms"
 includePaths.sfYaml = APPLICATION_PATH "/../library/vendor/sfYaml"
 includePaths.library = APPLICATION_PATH "/../library"
+
+bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
+bootstrap.class = "Bootstrap"
 
 ;
 ; autoloader
 ;
+autoloaderNamespaces[] = "Patchwork"
 autoloaderNamespaces[] = "IDS_"
 autoloaderNamespaces[] = "Doctrine_"
-autoloaderNamespaces[] = "Patchwork"
 autoloaderNamespaces[] = "ZFDoctrine"
 
-bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
-bootstrap.class = "Bootstrap"
+
 
 ; patchwork
 patchwork.options.restAPI.module = 'api'
@@ -35,7 +36,8 @@ patchwork.options.acl.errorAction = "denied"
 patchwork.container.interfaceX.bindImplementation = "App_Implementation_Y"
 
 patchwork.container.Patchwork_Auth_DBAdapter.bindImplementation = "Patchwork_Auth_Adapter_Doctrine"
-patchwork.container.Patchwork_Auth_DBModel.bindImplementation = "User"
+patchwork.container.Patchwork_Auth_DBModel.bindImplementation = "User_Model_User"
+patchwork.container.Patchwork_Preference_Service.bindImplementation = "Core_Service_PreferenceService"
 
 patchwork.container.Zend_Controller_Request_Abstract.bindFactory= "Patchwork_Factory"
 patchwork.container.Zend_Controller_Request_Abstract.bindFactoryMethod= "request"
@@ -95,8 +97,7 @@ resources.doctrine.options.sql_path = APPLICATION_PATH "/doctrine/sql"
 resources.doctrine.options.yaml_schema_path = APPLICATION_PATH "/doctrine/schema"
 resources.doctrine.options.use_query_cache = true
 resources.doctrine.manager.attributes.attr_model_loading = "model_loading_zend"
-resources.doctrine.connections.default.dsn = "mysql://root:passwd@localhost/my_app"
-
+resources.doctrine.connections.default.dsn = "mysql://root:@localhost/patchwork"
 
 ;
 ; PHPIDS
@@ -132,13 +133,16 @@ phpids.Caching.path            = APPLICATION_PATH "/../tmp/default_filter.cache"
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-resources.doctrine.connections.dsn.dsn = "sqlite::memory:"
+resources.doctrine.connections.default.dsn = "sqlite::memory:"
 resources.doctrine.options.use_zend_cache = 0
 
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
+phpSettings.error_reporting = E_ALL
 resources.frontController.params.displayExceptions = 1
+; for zf tool
+resources.doctrine.connections.default.dsn = "sqlite::memory:"
 
 [patchwork.local : development]
 [patchwork.dan : development]
