--- a/application/configs/fixtures/fixtures.yml
+++ b/application/configs/fixtures/fixtures.yml
@@ -1,4 +1,4 @@
-User:
+User_Model_User:
   # password test
   # salt test
   User_1:
@@ -7,11 +7,25 @@ User:
     email: dpozzi@gmx.net
     password: 3f14b6841ab09dc36d32a3d6f80ade58
     salt: 098f6bcd4621d373cade4e832627b4f6
-    role: admin
   User_2:
     id: 2
     username: alex
     email: aspaeth@m2soft.com
     password: 3f14b6841ab09dc36d32a3d6f80ade58
     salt: 098f6bcd4621d373cade4e832627b4f6
-    role: guest
+
+User_Model_Role:
+  Role1:
+    id: 1
+    name: guest
+  Role2:
+    id: 2
+    name: admin
+
+User_Model_UserRole:
+  URole_1:
+    user_id: 1
+    role_id: 2
+  Urole_2:
+    user_id: 2
+    role_id: 1
