Improved PHPIDS plugin configuration options

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -102,6 +102,9 @@ resources.doctrine.connections.default.dsn = "mysql://root:@localhost/patchwork"
 ;
 ; PHPIDS
 ;
+phpids.input = REQUEST,GET,POST,COOKIE
+phpids.skippedMCA.one = module/controller/action
+phpids.skippedMCA.two = mymodule/mycontroller/myaction
 phpids.impact_threshold = 10
 phpids.impact_controller = error
 phpids.impact_action = badrequest
